emulator/tests/snapshots/diagnostics__unknown_instruction.snap
---
source: emulator/tests/diagnostics.rs
assertion_line: 82
expression: "check_parse_errors(\"    xyz %a, %b\")"
---
error: unknown instruction 'xyz'
  ┌─ test.S:1:5
  │
1 │     xyz %a, %b
  │     ^ unknown instruction 'xyz'
